unpackaged/main/default/objects/Allocation_Report__c/Allocation_Report__c.object-meta.xml
<CustomObject>
    <description>It is used to store geographical allocation data for reporting purpose</description>
    <label>Allocation Report</label>
    <nameField>
        <displayFormat>AR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations Report</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>