unpackaged/main/default/objects/Allocation_Report__c/fields/Allocation_Used__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Used__c</fullName>
    <formula>IF(Barrels_Allocated__c &gt; 0, Barrels_Used__c / Barrels_Allocated__c, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Allocation Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>