unpackaged/main/default/objects/Allocation_Report__c/fields/Barrels_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Barrels_Allocated__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Barrels Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>