unpackaged/main/default/objects/Allocation_Report__c/fields/Brand_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Brand_Allocation__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Brand Allocation</label>
    <referenceTo>Brand_Allocation__c</referenceTo>
    <relationshipLabel>Allocations Report</relationshipLabel>
    <relationshipName>Allocations_Report</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>