unpackaged/main/default/objects/Allocation_Report__c/fields/Country_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Country_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Allocation</label>
    <referenceTo>Brand_Country_Allocation__c</referenceTo>
    <relationshipLabel>Allocations Report</relationshipLabel>
    <relationshipName>Allocations_Report</relationshipName>
    <type>Lookup</type>
</CustomField>