unpackaged/main/default/objects/Allocation_Report__c/fields/Region_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Region_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region Allocation</label>
    <referenceTo>Brand_Country_Region_Allocation__c</referenceTo>
    <relationshipLabel>Allocations Report</relationshipLabel>
    <relationshipName>Allocations_Report</relationshipName>
    <type>Lookup</type>
</CustomField>