unpackaged/main/default/objects/Allocation_Report__c/fields/Remaining_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Allocations__c</fullName>
    <formula>Barrels_Allocated__c -  Barrels_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Allocations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>